<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/lightGrey">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/listenlights_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/ivLogo"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/ivCart"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/cart"
                app:tint="@color/white" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/flMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/mBottomNav"
        android:layout_below="@id/mToolbar" />

    <RelativeLayout
        android:id="@+id/mBottomNav"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/lightGrey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rlPR"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:visibility="gone"
                    android:background="@drawable/dark_grey_background"/>

                <TextView
                    android:id="@+id/tvPR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/pr"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:padding="10dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rlGRPO"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:visibility="gone"
                    android:background="@drawable/dark_grey_background"/>

                <TextView
                    android:id="@+id/tvGRPO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/grpo"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:padding="10dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rlBinToBin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:visibility="gone"
                    android:background="@drawable/dark_grey_background"/>

                <TextView
                    android:id="@+id/tvBinToBin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_horizontal"
                    android:text="@string/bin_to_bin"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:padding="10dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rlDPR"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:visibility="gone"
                    android:background="@drawable/dark_grey_background"/>

                <TextView
                    android:id="@+id/tvDPR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/DPR"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:padding="10dp"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>