<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.LoginActivity"
    android:background="@color/darkGrey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/tag_line"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/listenlights_logo"
            android:backgroundTint="@color/white"
            app:tint="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="-10dp"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lets_grow_together"
            android:layout_marginTop="-10dp"
            android:textSize="12sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_main"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/light_grey_border_rounded_corner">

            <!-- INPUT -->
            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/username_icon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="15sp" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/username_icon"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/email"
                app:tint="@color/icon_color" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/light_grey_border_rounded_corner">

            <!-- INPUT -->
            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/icon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="15sp" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/icon"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/password"
                app:tint="@color/icon_color" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/forgot_password"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/red_fill_rounded_color"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="LOG IN"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>